--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ngx-minimongo",
-  "version": "2.0.0",
+  "version": "2.0.3",
   "description": "Minimongo module for Angular 2+",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "test",
     "build": "tsc"
