--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-minimongo",
-  "version": "2.0.3",
+  "name": "angular2-minimongo",
+  "version": "2.0.5",
   "description": "Minimongo module for Angular 2+",
   "main": "index.ts",
   "scripts": {
@@ -8,9 +8,8 @@
     "build": "tsc"
   },
   "repository": {
-    "prepublish": "npm run build",
     "type": "git",
-    "url": "git+https://github.com/s-soltys/ngx-minimongo.git"
+    "url": "git+https://github.com/s-soltys/angular2-minimongo.git"
   },
   "keywords": [
     "angular2",
@@ -21,9 +20,9 @@
   "author": "Szymon Soltysiak",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/s-soltys/ngx-minimongo/issues"
+    "url": "https://github.com/s-soltys/angular2-minimongo/issues"
   },
-  "homepage": "https://github.com/s-soltys/ngx-minimongo#readme",
+  "homepage": "https://github.com/s-soltys/angular2-minimongo#readme",
   "dependencies": {
     "@angular/core": "^2.3.1",
     "minimongo": "^4.3.1",
