Configure travis-ci.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "scripts": {
     "ng": "ng",
     "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
-    "test": "ng test"
+    "test": "ng test",
+    "test-ci": "ng test --single-run"
   },
   "dependencies": { 
     "minimongo": "^4.3.1", 
