--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "angular2-minimongo",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "Minimongo module for Angular 2+",
-  "main": "src/minimongo/minimongo.module.ts",
+  "main": "index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/s-soltys/angular2-minimongo.git"
